1.20.0 (stable):

2011-11-20  Murray Cumming  <murrayc@murrayc.com>

	Details View: Left-align numbers when using automatic alignment.

	* glom/libglom/data_structure/layout/layoutitem_field.[h|cc]:
	* glom/libglom/data_structure/layout/layoutitem_withformatting.[h|cc]:
	get_formatting_used_horizontal_alignment(): Add a for_details_view() 
	and return left-alignment for auto-alignment on a details view.
	* glom/mode_data/datawidget/entry.cc:
	* glom/utility_widgets/layoutwidgetbase.cc: Pass true to get that 
	effect.

	Right-aligned numbers on the detailed view just look sillier now that
	the entry widgets are full width, and when there are no other numbers
	above or below them. Note that we probably did not purposefully 
	change it show numbers with full width, but I would still want this
	alignment change.

2011-11-18  Murray Cumming  <murrayc@murrayc.com>

	Recognize GdaBlob as suitable for Image field types.

	* glom/libglom/data_structure/field.cc: Add to the map, to avoid 
	a warning.

2011-11-18  Murray Cumming  <murrayc@murrayc.com>

	Fix the build with latest GTK+ with --enable-warnings=fatal

	* glom/utility_widgets/eggspreadtable/eggspreadtablednd.c
	(set_drag_icon): Update from libegg to fix the build with deprecated GTK+ 
	API disabled.

2011-11-18  Murray Cumming  <murrayc@murrayc.com>

	Details: Move the checkbutton titles to the left.

	* glom/mode_data/datawidget/checkbutton.h: Contructor:
	Allow the title to be empty.
	* glom/mode_data/datawidget/datawidget.cc: Give the checkbutton a title 
	at the left, like other widgets. This looks consistent.

2011-11-17  Murray Cumming  <murrayc@murrayc.com>

	Update an example screenshot.

	* docs/website/screenshots/glom_example_lessonplanner.png: Update this 
	now that the calendar portal works again.
	* docs/website/screenshots/glom_select_field.png: Remove this because 
	it is not used.

2011-11-17  Murray Cumming  <murrayc@murrayc.com>
